--- a/TCGA_VIF_analysis/TCGA_WGS_Analysis/TCGA_WGS_virus_content_and_insertions_analysis.Rmd
+++ b/TCGA_VIF_analysis/TCGA_WGS_Analysis/TCGA_WGS_virus_content_and_insertions_analysis.Rmd
@@ -15,28 +15,9 @@ library(cowplot)
 
 ```{r}
 
-REMOVE_LIKELY_CONTAMINANTS = TRUE
-
-
-```
-
-# Parse Inputs
-
-```{r}
-# restrict analyses to PE samples
-
-TCGA_rnaseq_sample_align_stats = read.table("data/TCGA_rnaseq_sample_align_stats.tsv", header=T, sep="\t", stringsAsFactors = F)
-
-PE_samples = TCGA_rnaseq_sample_align_stats %>% filter(num_fq_sets == 2) %>% pull(sample_name)
-
-```
-
-
-```{r}
-
 # get align stats
 
-read_align_stats = read.table(gzfile("data/TCGA.star_align_stats.tsv.gz"), header=T, sep="\t", stringsAsFactors = F)
+read_align_stats = read.table(gzfile("data/TCGA.WGS.star_align_stats.tsv.gz"), header=T, sep="\t", stringsAsFactors = F)
 
 read_align_stats = read_align_stats %>% select(sample_name, Number.of.input.reads) %>% rename(sample_read_count = Number.of.input.reads)
 
@@ -45,46 +26,19 @@ read_align_stats
 ```
 
 
-```{r}
-
-# get info on contaminants
-contaminants_info = read.table("Find_Likely_Contaminants/TCGA_VIF_contaminants_only.tsv.saved", header=T, sep="\t", stringsAsFactors = F) %>% select(sample_name, virus, CONTAM) %>% unique()
-
-
-```
-
-
-
 ## refined insertions data
 ```{r}
 
+insertions_data = read.table(gzfile("data/TCGA.WGS.virus_insertions.tsv.gz"), sep="\t", stringsAsFactors = F, header=T, com='')
 
-insertions_data = read.table(gzfile("data/TCGA.virus_insertions.tsv.gz"), sep="\t", stringsAsFactors = F, header=T, com='')
-
-
-                                      
 insertions_data = insertions_data %>% rename(sample_name = X.sample)
 
 
-# restrict to PE read samples:
-insertions_data = insertions_data %>% filter(sample_name %in% PE_samples)
-
 #insertions_data$sample_name = str_replace(insertions_data$sample_name, ".vif.refined.tsv", "")
 insertions_data$TCGA = sapply(insertions_data$sample_name, function(x) { str_split(x, "-", n=2, simplify=FALSE)[[1]][1]} )
-insertions_data$sample_type = sapply(insertions_data$sample_name, function(x) {str_split(x, "-")[[1]][4] })
-
 insertions_data = insertions_data %>% filter(total > 0)
 
 ```
-
-```{r}
-
-# exclude the insertions at low complexity sequences
-
-insertions_data = insertions_data %>%  filter(flankA_fU >= 0.5 & flankB_fU >= 0.5)
-  
-  
-```  
 
 
 
@@ -115,6 +69,16 @@ insertions_data = insertions_data %>% mutate(total_rpm = total / sample_read_cou
 ```
 
 
+```{r}
+
+# exclude the insertions at low complexity sequences
+
+insertions_data = insertions_data %>%  filter(flankA_fU >= 0.5 & flankB_fU >= 0.5)
+  
+  
+```  
+
+
 
 ```{r}
 
@@ -139,42 +103,21 @@ write.table(K113_insertions_data, file="K113.insertions.tsv", quote=F, sep="\t",
 
 
 
-```{r}
-
-# remove contaminants in filtering
-
-nrow(insertions_data)
-
-if (REMOVE_LIKELY_CONTAMINANTS) {
-
-  insertions_data = left_join(insertions_data, contaminants_info, by=c('sample_name', 'virus')) %>%  filter(is.na(CONTAM)) %>% select(-CONTAM)
-  
-  nrow(insertions_data)
-  
-}
-
-```
-
 ## Virus content
 
 
 ```{r}
-virus_content_data = read.table(gzfile("data/TCGA.virus_content.tsv.gz"), header=T, sep="\t", stringsAsFactors = F, com='')
+virus_content_data = read.table(gzfile("data/TCGA.WGS.virus_content.tsv.gz"), header=T, sep="\t", stringsAsFactors = F, com='')
 
 
 virus_content_data = virus_content_data %>% rename(sample_name = X.sample)
 
-# restrict to PE samples
-virus_content_data = virus_content_data %>% filter(sample_name %in% PE_samples)
-
-
-#virus_content_data$sample_name = str_replace(virus_content_data$sample_name, ".VirusDetect.virus_read_counts_summary.tsv", "")
 
 virus_content_data$TCGA = sapply(virus_content_data$sample_name, function(x) { str_split(x, "-", n=2, simplify=FALSE)[[1]][1]} )
-virus_content_data$sample_type = sapply(virus_content_data$sample_name, function(x) {str_split(x, "-")[[1]][4] })
 
 
 ```
+
 
 ```{r}
 # normalize virus content by sample read count
@@ -202,22 +145,6 @@ write.table(K113_virus_content_data, "K113_virus_content.tsv", quote=F, sep="\t"
 
 ```
 
-```{r}
-
-# remove contaminants in filtering
-
-nrow(virus_content_data)
-
-if (REMOVE_LIKELY_CONTAMINANTS) {
-  
-  # remove contaminants
-  virus_content_data = left_join(virus_content_data, contaminants_info, by=c('sample_name', 'virus')) %>%  filter(is.na(CONTAM)) %>% select(-CONTAM)
-  
-  nrow(virus_content_data)
-  
-}
-
-```
 
 
 # Determine background / filtering levels for virus insertions
@@ -241,6 +168,8 @@ sample_counts_vs_min_chim_read_thresh %>% ggplot(aes(x=min_chim_read_threshold, 
 ```
 
 
+
+
 ```{r}
 
 #plot number of samples vs. min number of virus chimeric FPM threshold.
@@ -258,8 +187,6 @@ sample_counts_vs_min_chim_rpm_thresh %>% ggplot(aes(x=min_chim_rpm_threshold, y=
 
 
 ```
-
-
 
 
 
@@ -289,7 +216,7 @@ sample_counts_vs_min_chim_read_thresh_by_sample %>% ggplot(aes(x=min_chim_read_t
 #  Insertions  vs. total_rpm
 
 #plot number of samples vs. min number of virus chimeric reads threshold.
-min_chim_rpm_thresholds = c(0, 0.1, 0.2, 0.5, 1, 2)
+min_chim_rpm_thresholds = seq(0,0.1,0.01)
 sample_counts_vs_min_chim_rpm_thresh_by_sample = data.frame()
 for (min_chim_rpm_threshold in min_chim_rpm_thresholds) {
     sample_count_by_TCGA = insertions_data %>% filter(total_rpm >= min_chim_rpm_threshold) %>% 
@@ -300,9 +227,37 @@ for (min_chim_rpm_threshold in min_chim_rpm_thresholds) {
 
 
 sample_counts_vs_min_chim_rpm_thresh_by_sample %>% ggplot(aes(x=min_chim_rpm_threshold, y=num_samples, color=TCGA)) + geom_point() + geom_line()  +
-  geom_vline(xintercept = 0.2, color='blue') + 
+  geom_vline(xintercept = 0.01, color='blue') + 
   ggtitle("Sample count vs. min virus chimeric rpm") +
   facet_wrap(~TCGA, scale='free_y')
+
+
+
+
+```
+
+
+
+
+```{r}
+
+#  Insertions  vs. total_rpm
+
+#plot number of samples vs. min number of virus chimeric reads threshold.
+min_chim_rpm_thresholds = seq(0,.2,0.01)
+sample_counts_vs_min_chim_rpm_thresh_by_sample = data.frame()
+for (min_chim_rpm_threshold in min_chim_rpm_thresholds) {
+    sample_count_by_TCGA = insertions_data %>% filter(total_rpm >= min_chim_rpm_threshold) %>% 
+        select(sample_name, virus) %>% unique() %>% group_by(virus) %>% tally(name='num_samples') %>% mutate(min_chim_rpm_threshold=min_chim_rpm_threshold)
+    
+    sample_counts_vs_min_chim_rpm_thresh_by_sample = bind_rows(sample_counts_vs_min_chim_rpm_thresh_by_sample, sample_count_by_TCGA)
+}
+
+
+sample_counts_vs_min_chim_rpm_thresh_by_sample %>% ggplot(aes(x=min_chim_rpm_threshold, y=num_samples, color=virus)) + geom_point() + geom_line()  +
+  geom_vline(xintercept = 0.01, color='blue') + 
+  ggtitle("Sample count vs. min virus chimeric rpm") +
+  facet_wrap(~virus, scale='free_y')
 
 
 
@@ -326,7 +281,7 @@ virus_content_data %>% ggplot(aes(x=mapped)) + geom_density() + xlim(0,100)
 
 ```{r}
 
-virus_mapped_read_counts = virus_content_data %>% filter(! TCGA %in% c("CESC", "HNSC", "LIHC")) %>% select(sample_name, virus, mapped, n_bases_covered) %>%
+virus_mapped_read_counts = virus_content_data %>% select(sample_name, virus, mapped, n_bases_covered) %>%
     filter(! grepl("HPV", virus))
 
 quantile(virus_mapped_read_counts$mapped, probs = seq(0.9,1,0.001))
@@ -351,25 +306,6 @@ sample_counts_vs_min_read_thresh %>% ggplot(aes(x=min_read_threshold, y=num_samp
 
 ```
 
-
-```{r}
-
-#plot number of samples vs. min number of virus mapped RPM threshold.
-min_rpm_thresholds = c(1, 2, 3, 4, 5, 10, 20, 50, 100, 200, 500)
-sample_counts_vs_min_rpm_thresh = data.frame()
-for (min_rpm_threshold in min_rpm_thresholds) {
-    num_samples = virus_content_data %>% filter(mapped_rpm >= min_rpm_threshold) %>% select(sample_name) %>% unique() %>% nrow()
-    sample_counts_vs_min_rpm_thresh = bind_rows(sample_counts_vs_min_rpm_thresh, data.frame(min_rpm_threshold=min_rpm_threshold, num_samples=num_samples))
-}
-
-
-sample_counts_vs_min_rpm_thresh %>% ggplot(aes(x=min_rpm_threshold, y=num_samples)) + geom_point() + geom_line() +
-    geom_vline(xintercept = 20, color='blue') + ggtitle("Sample count vs. min virus-mapped rpm")
-
-```
-
-
-
 ```{r}
 sample_counts_vs_min_read_thresh_by_tcga = data.frame()
 for (min_read_threshold in min_read_thresholds) {
@@ -386,25 +322,57 @@ sample_counts_vs_min_read_thresh_by_tcga %>% ggplot(aes(x=min_read_threshold, y=
 
 ```{r}
 
-# Virus conrent by FPM treshold
+# Virus content by FPM treshold
 
-min_mapped_rpm_thresholds = c(1, 2, 3, 4, 5, 10, 20, 50, 100)
+min_mapped_rpm_thresholds = seq(0, 2, 0.02)
 sample_counts_vs_min_mapped_rpm = data.frame()
 
 for (min_mapped_rpm_threshold in min_mapped_rpm_thresholds) {
   
     num_samples_per_virus = virus_content_data %>% filter(mapped_rpm >= min_mapped_rpm_threshold) %>% 
       #mutate(virus = "ladeda") %>%
-      select(virus, sample_name) %>% unique() %>% 
-               group_by(virus) %>% tally(name='num_samples') %>% 
-               mutate(min_read_threshold=min_mapped_rpm_threshold)
+      select(TCGA, sample_name) %>% unique() %>% 
+               group_by(TCGA) %>% tally(name='num_samples') %>% 
+               mutate(min_mapped_rpm_threshold=min_mapped_rpm_threshold)
     
     sample_counts_vs_min_mapped_rpm = bind_rows(sample_counts_vs_min_mapped_rpm, num_samples_per_virus)
 }
 
 
-sample_counts_vs_min_mapped_rpm %>% ggplot(aes(x=min_read_threshold, y=num_samples, color=virus)) + geom_point() + geom_line() +
-  geom_vline(xintercept = 20, color='blue') +
+sample_counts_vs_min_mapped_rpm %>% ggplot(aes(x=min_mapped_rpm_threshold, y=num_samples, color=TCGA)) + geom_point() + geom_line() +
+  geom_vline(xintercept = 1, color='blue') +
+  ggtitle("Sample count vs. min virus-mapped rpm") +
+  facet_wrap(~TCGA, scale='free_y')
+#+
+#  scale_x_continuous(trans='log10')
+  
+
+
+```
+
+```{r}
+
+# Virus content by FPM treshold
+
+viruses_of_local_interest = virus_content_data %>% filter(mapped_rpm >= 0.1) %>% select(virus) %>% unique() %>% pull(virus)
+
+min_mapped_rpm_thresholds = seq(0, 2, 0.02)
+sample_counts_vs_min_mapped_rpm = data.frame()
+
+for (min_mapped_rpm_threshold in min_mapped_rpm_thresholds) {
+  
+    num_samples_per_virus = virus_content_data %>% filter(virus %in% viruses_of_local_interest & mapped_rpm >= min_mapped_rpm_threshold) %>% 
+      #mutate(virus = "ladeda") %>%
+      select(virus, sample_name) %>% unique() %>% 
+               group_by(virus) %>% tally(name='num_samples') %>% 
+               mutate(min_mapped_rpm_threshold=min_mapped_rpm_threshold)
+    
+    sample_counts_vs_min_mapped_rpm = bind_rows(sample_counts_vs_min_mapped_rpm, num_samples_per_virus)
+}
+
+
+sample_counts_vs_min_mapped_rpm %>% ggplot(aes(x=min_mapped_rpm_threshold, y=num_samples, color=virus)) + geom_point() + geom_line() +
+  geom_vline(xintercept = 1, color='blue') +
   ggtitle("Sample count vs. min virus-mapped rpm") +
   facet_wrap(~virus, scale='free_y')
 #+
@@ -412,6 +380,13 @@ sample_counts_vs_min_mapped_rpm %>% ggplot(aes(x=min_read_threshold, y=num_sampl
   
 
 
+```
+
+
+```{r}
+sample_counts_vs_min_mapped_rpm %>% ggplot(aes(x=min_mapped_rpm_threshold, y=num_samples, color=virus)) + geom_point() + geom_line() +
+  geom_vline(xintercept = 1, color='blue') +
+  ggtitle("Sample count vs. min virus-mapped rpm") + xlim(0,3) 
 ```
 
 
@@ -451,12 +426,29 @@ sample_counts_vs_min_covered_thresh_by_tcga %>% ggplot(aes(x=min_covered_thresho
 ```
 
 
+```{r}
+sample_counts_vs_min_covered_thresh_by_tcga = data.frame()
+for (min_covered_threshold in min_covered_thresholds) {
+    num_samples_by_tcga = virus_content_data %>% filter(virus %in% viruses_of_local_interest & n_bases_covered >= min_covered_threshold) %>%
+    select(sample_name, virus) %>% unique() %>% group_by(virus) %>% tally(name='num_samples') %>% mutate(min_covered_threshold = min_covered_threshold)
+    sample_counts_vs_min_covered_thresh_by_tcga = bind_rows(sample_counts_vs_min_covered_thresh_by_tcga, num_samples_by_tcga)
+}
+
+
+sample_counts_vs_min_covered_thresh_by_tcga %>% ggplot(aes(x=min_covered_threshold, y=num_samples, color=virus)) + geom_point() + geom_line() +
+    geom_vline(xintercept = 500, color='blue') + ggtitle("Sample count vs. min virus-covered bases") +
+  facet_wrap(~virus, scale='free_y')
+
+```
+
+
+
 # Filter insertions and virus content accoring to decided-upon thresholds.
 
 ```{r}
 
-MIN_CHIM_RPM = 0.2
-MIN_MAPPED_RPM = 20
+MIN_CHIM_RPM = 0.01
+MIN_MAPPED_RPM = 1
 MIN_N_BASES_COVERED = 500
 
 ```
@@ -557,14 +549,10 @@ for (i in seq(1, counter-1)) {
 
 # cat */*gs.files.list | grep init | grep abridged |grep full |  perl -MFile::Basename -lane '$fname = basename($_); @pts = split(/\./, $fname); $sample = $pts[0]; @pts2 = split(/-/, $sample); $tcga = $pts2[0]; print join("\t", $tcga, $sample);' > tcga.samples_list
 
-tcga_samples_list_file = "data/tcga.samples_list"
+tcga_samples_list_file = "data/TCGA.samples.list"
 tcga_samples_processed = read.table(tcga_samples_list_file, header=F, sep="\t", stringsAsFactors = F)
 
 colnames(tcga_samples_processed) = c("TCGA", "sample_name")
-
-# restrict to PE samples
-tcga_samples_processed = tcga_samples_processed %>% filter(sample_name %in% PE_samples)
-
 
 tcga_sample_counts = tcga_samples_processed %>% group_by(TCGA) %>% tally(name='tot_samples')
 
@@ -600,28 +588,10 @@ tcga_sample_counts_by_sampletype %>%
     geom_text(aes(label = tot_samples )  , vjust = 'center', color='black') +
     theme(axis.text.x = element_text(angle = 90, hjust = 1))
                
-tcga_sample_counts_by_sampletype %>%
-    ggplot(aes(x=TCGA, y=tot_samples)) + geom_bar(stat='identity', aes(fill=sample_type)) +
-    geom_text(aes(label = tot_samples )  , vjust = 'center', color='black') +
-    theme(axis.text.x = element_text(angle = 90, hjust = 1))
-               
-```
-
-
-
-```{r}
-library(ggpubr)
-
-integrated_insertions_n_content = full_join(
-  filtered_virus_content_data %>% select(sample_name, virus, mapped_rpm),
-  filtered_insertions_data %>% select(sample_name, virus, total_rpm) %>% group_by(sample_name, virus) %>% arrange(desc(total_rpm)) %>% filter(row_number() == 1),
-  by=c('sample_name', 'virus') )
-
-
-integrated_insertions_n_content %>% filter(! is.na(total_rpm)) %>% ggplot(aes(x=mapped_rpm, y=total_rpm)) + geom_point() + facet_wrap(~virus) +
-   stat_cor(label.y = 100) 
 
 ```
+
+
 
 
 
@@ -811,6 +781,8 @@ sample_counts_with_insertions
 summary_count_table = full_join(tcga_sample_counts_by_sampletype, sample_counts_with_virus)
 summary_count_table = full_join(summary_count_table, sample_counts_with_insertions)
 
+summary_count_table = summary_count_table %>% filter(! is.na(sample_type) )
+
 summary_count_table[is.na(summary_count_table)] = 0
 
 summary_count_table
@@ -874,9 +846,9 @@ ggsave(tcga_virus_summary_plot, file="tcga_virus_summary_plot.pdf", width=12, he
 
 # organize into a matrix of median reads mapped by tissue_id
 
-virus_median_mapped_by_tissue_id = filtered_virus_content_data %>% select(TCGA, sample_type, virus, mapped) %>% group_by(TCGA, sample_type, virus) %>% 
+virus_median_mapped_by_tissue_id = filtered_virus_content_data %>% select(TCGA, virus, mapped) %>% group_by(TCGA, virus) %>% 
   mutate(median_mapped = median(mapped), sample_count = n()) %>% 
-  select(TCGA, sample_type, virus, median_mapped, sample_count) %>% unique() 
+  select(TCGA, virus, median_mapped, sample_count) %>% unique() 
 
 
 
@@ -884,8 +856,7 @@ virus_median_mapped_by_tissue_id = filtered_virus_content_data %>% select(TCGA, 
 
 ```{r}
 
-virus_median_mapped_all_plot = virus_median_mapped_by_tissue_id  %>% mutate(tcga_type = paste0(TCGA, "-", sample_type)) %>%
-  ggplot(aes(y=tcga_type, x=median_mapped, size=sample_count, color=virus)) +
+virus_median_mapped_all_plot = virus_median_mapped_by_tissue_id  %>% ggplot(aes(y=TCGA, x=median_mapped, size=sample_count, color=virus)) +
   geom_point()
 
 
@@ -899,18 +870,23 @@ ggsave(virus_median_mapped_all_plot, file="TCGA_virus_median_mapped_all_plot.pdf
 ```
 
 
-
 ```{r}
-virus_median_mapped_by_tissue_id_frac_samples =  left_join(virus_median_mapped_by_tissue_id, tcga_sample_counts_by_sampletype, by=c('TCGA', 'sample_type') ) %>% mutate(tcga_type = paste0(TCGA, "-", sample_type)) %>%
-  mutate(frac_samples = sample_count / tot_samples) %>% 
-  filter(sample_count > 1 & frac_samples >= 0.02) 
 
-virus_median_mapped_by_tissue_id_frac_samples %>% arrange(desc(frac_samples))
-
-virus_median_mapped_by_tissue_id_frac_samples %>%
-   ggplot(aes(y=tcga_type, x=median_mapped, size=frac_samples, color=virus)) +
+virus_median_mapped_by_tissue_id  %>% ggplot(aes(y=virus, x=median_mapped, size=sample_count, color=TCGA)) +
   geom_point()
 
+
+```
+
+```{r}
+
+# restrict to just those TCGA samples having sufficient viral content (min 5% here)
+TCGA_w_sufficient_virus_content = summary_count_table_w_frac %>% filter(sample_type %in% c('NT', 'TP') & frac_w_virus >= 0.05) %>% select(TCGA) %>% unique() %>% pull(TCGA)
+
+
+virus_median_mapped_by_tissue_id  %>% filter(TCGA %in% TCGA_w_sufficient_virus_content) %>% 
+  ggplot(aes(y=virus, x=median_mapped, size=sample_count, color=TCGA)) +
+  geom_point()
 
 ```
 
@@ -918,36 +894,9 @@ virus_median_mapped_by_tissue_id_frac_samples %>%
 
 ```{r}
 
-virus_median_mapped_by_tissue_id  %>% mutate(tcga_type = paste0(TCGA, "-", sample_type))  %>%
-  ggplot(aes(y=virus, x=median_mapped, size=sample_count, color=tcga_type)) +
-  geom_point()
 
-
-```
-
-
-
-
-
-```{r}
-
-virus_median_mapped_by_tissue_id_frac_samples  %>% ggplot(aes(y=virus, x=median_mapped, size=frac_samples, color=tcga_type)) +
-  geom_point()
-
-
-```
-
-
-
-
-
-
-```{r}
-
-
-virus_median_mapped_by_tissue_id_plot = virus_median_mapped_by_tissue_id_frac_samples  %>%
-  mutate(tcga_type = paste0(TCGA, "-", sample_type))  %>%
-  ggplot(aes(y=tcga_type, x=median_mapped, size=frac_samples, color=virus)) +
+virus_median_mapped_by_tissue_id_plot = virus_median_mapped_by_tissue_id  %>% 
+  ggplot(aes(y=TCGA, x=median_mapped, size=sample_count, color=virus)) +
   geom_point() + facet_wrap(~virus, scale='free', ncol=3)
 
 
