--- a/TCGA_VIF_analysis/TCGA_virus_content_and_insertions_analysis.Rmd
+++ b/TCGA_VIF_analysis/TCGA_virus_content_and_insertions_analysis.Rmd
@@ -87,6 +87,23 @@ insertions_data = insertions_data %>%  filter(flankA_fU >= 0.5 & flankB_fU >= 0.
 ```  
 
 
+```{r}
+
+# assign virus column and specific coordinate info for virus and human
+
+insertions_data$virus = sapply(insertions_data$virus_brkend_grp, function(x) { str_split(x, ":")[[1]][1] })
+
+insertions_data = insertions_data %>% 
+  mutate(humanchr = ifelse(chrA==virus, chrB, chrA)) %>%
+  mutate(virus_coord = ifelse(chrA==virus, coordA, coordB)) %>%
+  mutate(human_coord = ifelse(chrA==virus, coordB, coordA)) 
+
+
+```
+
+
+
+
 
 
 ```{r}
@@ -99,6 +116,11 @@ insertions_data = insertions_data %>%
     # assign virus and humanchr columns
     mutate(virus = ifelse(grepl("chr", chrA), chrB, chrA),
     humanchr = ifelse(grepl("chr", chrA), chrA, chrB) )
+
+
+
+
+
 
 ```
 
