added HELA supplemented WXS

--- a/CCLE_VIF_analysis/CCLE_WXS_analysis/CCLE_WXS_virus_content_and_insertion_analysis.Rmd
+++ b/CCLE_VIF_analysis/CCLE_WXS_analysis/CCLE_WXS_virus_content_and_insertion_analysis.Rmd
@@ -21,6 +21,8 @@ read_align_stats = read.table(gzfile("data/CCLE.WXS.star_align_stats.tsv.gz"), h
 
 read_align_stats = read_align_stats %>% select(sample_name, Number.of.input.reads) %>% rename(sample_read_count = Number.of.input.reads)
 
+read_align_stats$sample_name = sapply(read_align_stats$sample_name, function(x) { str_split(x, "_")[[1]][1]})
+
 read_align_stats
 
 ```
@@ -107,9 +109,12 @@ K113_insertions_data = insertions_data %>% filter(grepl("K113", virus))
 
 insertions_data = insertions_data %>% filter(! grepl("K113", virus))
 
-
+insertions_data %>% select(sample_name, contig, tissue_id, total, total_rpm)
 
 ```
+
+
+
 
 
 ```{r}
@@ -189,7 +194,7 @@ sample_counts_vs_min_chim_read_thresh %>% ggplot(aes(x=min_chim_read_threshold, 
 ```{r}
 
 #plot number of samples vs. min number of virus chimeric FPM threshold.
-min_chim_rpm_thresholds = c(0, 0.1, 0.2, 1, 2, 3, 4, 5, 10, 20, 50, 100)
+min_chim_rpm_thresholds = c(0, 0.1, 0.2, 1, 2, 3, 4, 5)
 sample_counts_vs_min_chim_rpm_thresh = data.frame()
 for (min_chim_rpm_threshold in min_chim_rpm_thresholds) {
     num_samples = insertions_data %>% filter(total_rpm >= min_chim_rpm_threshold) %>% 
@@ -199,7 +204,8 @@ for (min_chim_rpm_threshold in min_chim_rpm_thresholds) {
 }
 
 
-sample_counts_vs_min_chim_rpm_thresh %>% ggplot(aes(x=min_chim_rpm_threshold, y=num_samples)) + geom_point() + geom_line() + ylim(0, NA) + geom_vline(xintercept = 0.2, color='blue') + ggtitle("Sample count vs. min virus chimeric rpm") # + xlim(0,10)
+sample_counts_vs_min_chim_rpm_thresh %>% ggplot(aes(x=min_chim_rpm_threshold, y=num_samples)) + geom_point() + geom_line() + ylim(0, NA) + 
+  geom_vline(xintercept = 0.2, color='blue') + ggtitle("Sample count vs. min virus chimeric rpm") # + xlim(0,10)
 
 
 ```
@@ -233,7 +239,7 @@ virus_mapped_read_counts
 ```{r}
 
 #plot number of samples vs. min number of virus mapped reads threshold.
-min_read_thresholds = c(0, 1, 5, 10, 20, 50, 100, 200, 500)
+min_read_thresholds = c(0, 1, 5, 10, 20, 50, 100, 200)
 sample_counts_vs_min_read_thresh = data.frame()
 for (min_read_threshold in min_read_thresholds) {
     num_samples = virus_content_data %>% filter(mapped >= min_read_threshold) %>% select(sample_name) %>% unique() %>% nrow()
@@ -251,7 +257,7 @@ sample_counts_vs_min_read_thresh %>% ggplot(aes(x=min_read_threshold, y=num_samp
 ```{r}
 
 #plot number of samples vs. min number of virus mapped RPM threshold.
-min_rpm_thresholds = c(1, 2, 3, 4, 5, 10, 20, 50, 100, 200, 500)
+min_rpm_thresholds = c(1, 2, 3, 4, 5)
 sample_counts_vs_min_rpm_thresh = data.frame()
 for (min_rpm_threshold in min_rpm_thresholds) {
     num_samples = virus_content_data %>% filter(mapped_rpm >= min_rpm_threshold) %>% select(sample_name) %>% unique() %>% nrow()
@@ -260,7 +266,8 @@ for (min_rpm_threshold in min_rpm_thresholds) {
 
 
 sample_counts_vs_min_rpm_thresh %>% ggplot(aes(x=min_rpm_threshold, y=num_samples)) + geom_point() + geom_line() +
-    geom_vline(xintercept = 20, color='blue') + ggtitle("Sample count vs. min virus-mapped rpm")
+  #  geom_vline(xintercept = 20, color='blue') + 
+  ggtitle("Sample count vs. min virus-mapped rpm")
 
 ```
 
@@ -289,8 +296,8 @@ sample_counts_vs_min_covered_thresh %>% ggplot(aes(x=min_covered_threshold, y=nu
 
 ```{r}
 
-MIN_CHIM_RPM = 0.2
-MIN_MAPPED_RPM = 20
+MIN_CHIM_RPM = 0 #0.2
+MIN_MAPPED_RPM = 0 # 20
 MIN_N_BASES_COVERED = 500
 
 ```
@@ -383,49 +390,6 @@ for (i in seq(1, counter-1)) {
 
 
 # integrate virus content and insertion data
-
-
-```{r}
-
-#Examine numbers of samples per tissue type
-
-
-
-#Examine numbers of samples per tissue_id type
-
-
-tissue_id_samples_list_file = "data/CCLE.samples_list"
-tissue_id_samples_processed = read.table(tissue_id_samples_list_file, header=F, sep="\t", stringsAsFactors = F)
-
-colnames(tissue_id_samples_processed) = c("tissue_id", "sample_name")
-
-tissue_id_sample_counts = tissue_id_samples_processed %>% group_by(tissue_id) %>% tally(name='tot_samples')
-
-
-tissue_sample_counts = tissue_id_sample_counts
-
-
-```
-
-
-
-
-
-
-```{r}
-# plot sample counts
-
-tissue_sample_counts %>%
-    ggplot(aes(x=tissue_id, y=tot_samples)) + geom_bar(position='dodge', stat='identity') +
-    geom_text(aes(label = tot_samples )  , vjust = 'left', color='black') +
-    theme(axis.text.x = element_text(angle = 90, hjust = 1))
-               
-
-
-
-```
-
-
 
 
 
@@ -610,134 +574,15 @@ sample_counts_with_insertions =  combined_data %>% filter(! is.na(total)) %>%
 sample_counts_with_insertions %>% arrange(desc(w_inserts))
 ```
 
-```{r}
-
-summary_count_table = full_join(tissue_sample_counts, sample_counts_with_virus)
-summary_count_table = full_join(summary_count_table, sample_counts_with_insertions)
-
-summary_count_table[is.na(summary_count_table)] = 0
-
-summary_count_table
-```
-
-
-
 
 ```{r}
 
-summary_count_table_w_frac = summary_count_table %>% 
-    mutate(frac_w_virus = w_virus/tot_samples,
-           frac_w_inserts = w_inserts / tot_samples)
+# pull out data w/o conflicts
 
-summary_count_table_w_frac
-```
-
-
-
-```{r}
-
-
-summary_frac_insertion_virus_table_plot = summary_count_table_w_frac %>% gather(key=frac_type, value=fraction, frac_w_virus, frac_w_inserts) %>%
-    ggplot(aes(x=frac_type, y=fraction, fill=frac_type)) + geom_bar(position='dodge', stat='identity') +
-    geom_text(aes(label =  sprintf("%.2f", fraction) )  , vjust = 'left', color='black') +
-    theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
-    facet_wrap(~tissue_id, scale='free_x')
-
-
-summary_frac_insertion_virus_table_plot
-
-```
-
-```{r}
-
-ggsave(summary_frac_insertion_virus_table_plot, file="CCLE_virus_summary_plot.pdf", width=12, height=12)
-
-```
-
-
-```{r}
-# Deeper insights into insertions
-
-virus_median_insertion_rpm_by_tissue_id = filtered_insertions_data %>% 
-  group_by(sample_name, tissue_id, virus) %>% arrange(desc(total_rpm)) %>% filter(row_number() == 1) %>% ungroup() %>% # best insertion per sample
-  select(tissue_id, virus, total_rpm) %>% group_by(tissue_id, virus) %>% 
-  mutate(median_total_rpm = median(total_rpm), sample_count = n()) %>% 
-  select(tissue_id, virus, median_total_rpm, sample_count) %>% unique() 
+merged_report_w_conflicts %>% filter(is.na(conflict) )
 
 
 ```
-
-
-```{r}
-
-virus_median_insertion_rpm_by_tissue_id   %>% ggplot(aes(y=tissue_id, x=median_total_rpm, size=sample_count, color=virus)) +
-  geom_point() + ggtitle("Insertions")
-
-
-
-```
-
-
-```{r}
-
-virus_median_insertion_rpm_by_tissue_id   %>% ggplot(aes(y=tissue_id, x=median_total_rpm, size=sample_count, color=virus)) +
-  geom_point() + ggtitle("Insertions") + facet_wrap(~virus, scale='free', ncol=2)
-
-
-
-
-```
-
-
-```{r}
-
-# organize into a matrix of median reads mapped by tissue_id
-
-virus_median_mapped_by_tissue_id = filtered_virus_content_data %>% select(tissue_id, virus, mapped_rpm) %>% group_by(tissue_id, virus) %>% 
-  mutate(median_mapped_rpm = median(mapped_rpm), sample_count = n()) %>% 
-  select(tissue_id, virus, median_mapped_rpm, sample_count) %>% unique() 
-
-
-
-```
-
-```{r}
-
-virus_median_mapped_all_plot = virus_median_mapped_by_tissue_id  %>% ggplot(aes(y=tissue_id, x=median_mapped_rpm, size=sample_count, color=virus)) +
-  geom_point()
-
-
-virus_median_mapped_all_plot
-```
-
-```{r}
-ggsave(virus_median_mapped_all_plot, file="CCLE_virus_median_mapped_all_plot.pdf", width=20, height=9)
-
-```
-
-
-```{r}
-
-
-virus_median_mapped_by_tissue_id_plot = virus_median_mapped_by_tissue_id  %>% 
-  #filter(! grepl("Cells_EBV", tissue_id)) %>%
-  ggplot(aes(y=tissue_id, x=median_mapped_rpm, size=sample_count, color=virus)) +
-  geom_point() + facet_wrap(~virus, scale='free', ncol=2)
-
-
-
-virus_median_mapped_by_tissue_id_plot
-
-
-```
-```{r}
-
-ggsave(virus_median_mapped_by_tissue_id_plot, width=20, height=35, file="CCLE_virus_median_mapped_by_tissue_id.plot.pdf")
-
-
-```
-
-
 
 
 
